[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodenser"
version = "0.0.1"
description = "Project charge/spin densities onto tesseral harmonics and point-group irreps"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Luca Buiarelli"}]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]