[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodencer"
version = "0.0.1"
description = "Project charge/spin Densities onto Cubic/tesseral harmonics and point-group Representations."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Luca Buiarelli"}]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]